fix: overflow issue, and on disconnecting the room issue

--- a/src/components/code-editor/code-editor.styles.css
+++ b/src/components/code-editor/code-editor.styles.css
@@ -4,7 +4,7 @@
   line-height: 1.6;
   max-width: calc(100vw - 296px);
   min-height: 100vh;
-  padding-top: 16px;
+  padding-top: 28px;
 
   @media screen and (max-width: 768px) {
     max-width: 100vw;
